resolved issue with footer on mobile. who we are added to mobile. still going with carousel.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -95,11 +95,12 @@ h2 {
     background: url("/images/travel_1.jpg") no-repeat center top;
     background-position: center center;
     text-align: center;
-    min-height: 700px;
-    max-height: 800px;
-    width: 100%;
+    height: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    width: auto;
     background-size: cover;
-    display: flex;
+    display: flex !important;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
@@ -266,10 +267,6 @@ iframe {
     margin-top: 0px;
 }
 
-.navbarColor {
-    background-color: white;
-}
-
 .carouselImages {
     margin: auto;
 }
@@ -285,8 +282,43 @@ iframe {
 .carouselText {
     position: absolute;
     top: 0;
-    width: 80%;
+    width: 100%;
     background-color: #141939;
     color: white;
     word-wrap: break-word;
+}
+
+.QSBox {
+    background: #5DBCD2;
+    margin-top: 50px;
+    height: 100%;
+    padding: 50px 0;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+@media (max-width:991px) {
+    .footerMobile {
+        text-align: center;
+    }
+    #subscribeButton {
+        text-align: center;
+        width: auto;
+    }
+
+.QSBox {
+    background: #5DBCD2;
+    margin-top: 50px;
+    height: 100%;
+    padding: 50px 0;
+    width: auto;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 }
